Fixing docker file to execute properly
