# backend/controller/GroupRoutes.js
@@ -1,6 +1,6 @@
 const
     router = require('express').Router({}),
-    service = require('../controller/GroupService');
+    service = require('../service/GroupService');
 
 /**
  *  Group API
@@ -14,6 +14,12 @@ router.route('/:groupId')
     .get(service.findGroupById)
     .delete(service.deleteGroupById)
     .put(service.updateGroupById);
+
+router.route('/name/:name')
+    .get(service.findGroupByName);
+
+router.route('/admin/:admin')
+    .get(service.findGroupByAdmin);
 
 // Expose express
 module.exports = router;
