# backend/controller/UserRoutes.js
@@ -1,6 +1,6 @@
 const
     router = require('express').Router({}),
-    service = require('../controller/UserService');
+    service = require('../service/UserService');
 
 /**
  *  User API
@@ -14,6 +14,9 @@ router.route('/:userId')
     .get(service.findUserById)
     .delete(service.deleteUserById)
     .put(service.updateUserById);
+
+router.route('/email/:email')
+    .get(service.findUserByEmail);
 
 // Expose express
 module.exports = router;
